tests/parsing/errors/scanner/unclosedString.js
let x = "unclosed
let z = "eof 
